@@ -13,8 +13,9 @@ const NSString * SI_INSTANCE_STEP_MAPPING_REF_KEY = @"__stepMapping";
 
 NSString * SI_RUN_FINISHED_NOTIFICATION = @"Simon run finished"; 
 NSString * SI_SHUTDOWN_NOTIFICATION = @"Simon shutdown"; 
-NSString * SI_RERUN_SINGLE_NOTIFICATION = @"Simon rerun story"; 
-NSString * SI_RERUN_GROUP_NOTIFICATION = @"Simon rerun group"; 
+NSString * SI_RUN_STORIES_NOTIFICATION = @"Simon run stories";
 NSString * SI_WINDOW_REMOVED_NOTIFICATION = @"Simon window removed"; 
+
+NSString * SI_STORIES_TO_RUN_LIST = @"Stories to be run";
 
 const char * SI_QUEUE_NAME = "au.com.derekclarkson.simon";
